# PotreeConverter

./: .gitignore  CMakeLists.txt  PotreeConverterBatched.py  PotreeConverterBatchedConfigDelftblue.ini  PotreeConverterBatchedConfigInteldevcloud.ini  README.md  copy_ahn3_headers.sh  createPartitions.py  delftblue_cluster.sh  dotTreefromHierarchy.py  launchPotreeConverter.py  run_PotreeConverterBatched.py
Converter/include/: Attributes.h  ConcurrentWriter.h  HierarchyBuilder.h  MPIcommon.h  Monitor.h  PotreeConverter.h  Vector3.h  chunker_countsort_laszip.h  converter_utils.h  indexer.h  logger.h  record_timings.hpp  sampler_poisson.h  structures.h
Converter/libs/arguments/: Arguments.hpp
Converter/modules/LasLoader/: LasLoader.cpp  LasLoader.h
Converter/modules/unsuck/: TaskPool.hpp  unsuck.hpp  unsuck_platform_specific.cpp
Converter/src/: chunker_countsort_laszip.cpp  indexer.cpp  logger.cpp  main.cpp
PotreeConverterPartitioned/: potreeconverterpartitioned.py  run_PotreecConverterBatched.py
PotreeConverterPartitioned/copier/: copier.py  parallelcopier.py  simplecopier.py
PotreeConverterPartitioned/loggingwrapper/: loggingwrapper.py
PotreeConverterPartitioned/scheduler/: localScheduler.py  qsubScheduler.py  sbatchScheduler.py  scheduler.py
copier/: __init__.py  copier.py  localCopier.py  parallelcopier.py  simplecopier.py
example/: ahn3_local_partitions.csv  mpi.ini  mpi_ahn3_local.ini
examples/: ahn3_local_partitions.csv  mpi.ini  mpi_ahn3_local.ini  run_slurm.sh
loggingwrapper/: loggingwrapper.py
potreeconverterpartitioned/: __init__.py  potreeconverterpartitioned.py
potreeconverterpartitioned/copier/: __init__.py  copier.py  parallelcopier.py  simplecopier.py
potreeconverterpartitioned/loggingwrapper/: loggingwrapper.py
potreeconverterpartitioned/partitions/: ahn3_partitions_8x8.csv
potreeconverterpartitioned/scheduler/: __init__.py  localScheduler.py  qsubScheduler.py  sbatchScheduler.py  scheduler.py
scheduler/: localScheduler.py  qsubScheduler.py  sbatchScheduler.py  scheduler.py
util_scripts/: copy_ahn3_headers.sh  createPartitions.py  create_json_headers.sh  dotTreefromHierarchy.py  randomAHN3.py
